- Added categories to all recipes
- Added tag in stone button recipe