@@ -7,7 +7,7 @@
         }
     ],
     "result": {
-        "item": "minecraft:black_dye",
+        "item": "minecraft:light_blue_dye",
         "count": 1
     }
 }
