@@ -1,9 +1,0 @@
-{
-    "type": "minecraft:crafting_shapeless",
-    "category": "misc",
-    "ingredients": [],
-    "result": {
-        "item": "minecraft:green_dye",
-        "count": 1
-    }
-}
