@@ -1,0 +1,16 @@
+{
+    "type": "minecraft:crafting_shapeless",
+    "category": "misc",
+    "ingredients": [
+        {
+            "item": "minecraft:dirt"
+        },
+        {
+            "item": "minecraft:hanging_roots"
+        }
+    ],
+    "result": {
+        "item": "minecraft:rooted_dirt",
+        "count": 1
+    }
+}
