@@ -1,0 +1,13 @@
+{
+    "type": "minecraft:crafting_shapeless",
+    "category": "building",
+    "ingredients": [
+        {
+            "item": "minecraft:packed_ice"
+        }
+    ],
+    "result": {
+        "item": "minecraft:ice",
+        "count": 9
+    }
+}
