@@ -1,0 +1,18 @@
+{
+    "type": "minecraft:crafting_shaped",
+    "category": "building",
+    "pattern": [
+        "w",
+        "",
+        ""
+    ],
+    "key": {
+        "w": {
+            "tag": "minecraft:wool"
+        }
+    },
+    "result": {
+        "item": "minecraft:string",
+        "count": 4
+    }
+}
