@@ -1,0 +1,9 @@
+{
+    "type": "minecraft:smelting",
+    "ingredient": {
+        "item": "minecraft:rotten_flesh"
+    },
+    "result": "minecraft:leather",
+    "experience": 0.1,
+    "cookingtime": 150
+}
