@@ -1,0 +1,8 @@
+{
+    "type": "minecraft:stonecutting",
+    "ingredient": {
+        "item": "minecraft:sticky_piston"
+    },
+    "result": "minecraft:slime_ball",
+    "count": 1
+}
