@@ -1,0 +1,6 @@
+{
+    "values": [
+        "minecraft:leather",
+        "minecraft:rabbit_hide"
+    ]
+}
